ExampleManifest/Ingress/alb-external-ingress-dx-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: alb-external-ingress
  labels:
    app: dx-haproxy
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: alb-external-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip #instance
    alb.ingress.kubernetes.io/certificate-arn: 
    alb.ingress.kubernetes.io/group.name: portal
    alb.ingress.kubernetes.io/subnets: idlist


spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation

  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dx-haproxy
            port:
              number: 8081

# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: alb-external-ingress-1636
  labels:
    app: alb-external-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 1636}]'
    alb.ingress.kubernetes.io/load-balancer-name: alb-external-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: portal
    alb.ingress.kubernetes.io/subnets: 

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dx-haproxy
            port:
              number: 1636
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: alb-external-ingress-9043
  labels:
    app: alb-external-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 9043}]'
    alb.ingress.kubernetes.io/load-balancer-name: alb-external-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: portal
    alb.ingress.kubernetes.io/subnets: 

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dx-haproxy
            port:
              number: 9043
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: alb-external-ingress-10203
  labels:
    app: alb-external-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 10203}]'
    alb.ingress.kubernetes.io/load-balancer-name: alb-external-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: portal
    alb.ingress.kubernetes.io/subnets: 

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dx-haproxy
            port:
              number: 10203
